GX-3727 fix spacing issue

--- a/src/app/preview-popup/preview-popup.component.css
+++ b/src/app/preview-popup/preview-popup.component.css
@@ -585,8 +585,9 @@ color: #000000;
   background: #F6F5F2;
   padding: 15px;
   text-align: left;
-  /* margin-bottom: 10px;
-  width: calc(100% - 220px);
+  margin-bottom: 12px;
+  padding-right: 70px;
+  /* width: calc(100% - 220px);
   position: absolute;
   bottom: -80px;
   left: 0;
